--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,15 @@ body {
   }
 }
 
+.nav__mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media screen and (max-width: 767px) {
   .nav__mobile-menu {
     display: none;
@@ -180,6 +189,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    padding: 30px 40px;
     background-color: white;
   }
   .nav__mobile-menu.is-open {
@@ -198,8 +208,26 @@ body {
           align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  .nav-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
 .nav-menu__item:not(:last-child) {
   margin-right: 50px;
+}
+
+@media screen and (max-width: 767px) {
+  .nav-menu__item:not(:last-child) {
+    margin-right: 0;
+  }
 }
 
 .nav-menu__link {
@@ -216,8 +244,11 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-  .nav-menu {
-    display: none;
+  .nav-menu__link {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-size: 40px;
+    font-weight: 500;
   }
 }
 
@@ -226,10 +257,9 @@ body {
   font-weight: 500;
 }
 
-@media screen and (max-width: 1200px) {
-  .header-contacts__item {
-    margin: 0;
-    padding: 0;
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    margin-left: 100px;
   }
 }
 
@@ -249,6 +279,15 @@ body {
 
 .header-contacts__link:hover, .header-contacts__link:focus {
   color: #2196F3;
+}
+
+@media screen and (max-width: 767px) {
+  .header-contacts__link {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-size: 34px;
+    font-weight: 500;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -271,7 +310,9 @@ body {
 
 @media screen and (max-width: 767px) {
   .header-contacts {
-    display: none;
+    margin: 0;
+    padding: 0;
+    display: block;
   }
 }
 
@@ -315,6 +356,12 @@ body {
   height: 4px;
   border-radius: 2px;
   background-color: #2196F3;
+}
+
+@media screen and (max-width: 767px) {
+  .current::after {
+    display: none;
+  }
 }
 
 .nav-logo {
@@ -464,9 +511,21 @@ body {
   border-radius: 4px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 479px) {
+  .modal-wrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 480px) {
   .modal-wrapper {
     width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-wrapper {
+    width: 530px;
   }
 }
 
