--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -38,10 +38,21 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:479px) {
+        width: 100%;
+
+    }
+
+
+@media screen and (min-width:480px) {
     width: 450px;
+    
 }
 
+@media screen and (min-width:1200px) {
+    width: 530px;
+
+}
 
 .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(0.9);
