--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -17,8 +17,11 @@
     
     display: flex;
     align-items: center;
+    
     z-index: 2;
 
+
+   
 
     &__button {
         z-index: 5;
@@ -51,7 +54,9 @@
     }
 
     &__mobile-menu{
-      
+    display: flex;
+        align-items: center;
+        
 
         
 
@@ -62,6 +67,8 @@
                         left: 0;
                         width: 100%;
                         height: 100%;
+                        
+                        padding: 30px 40px;
 
                         background-color: white;
                         
@@ -71,6 +78,7 @@
                             }
             
         }
+                
     }
 }
 
@@ -81,9 +89,19 @@
     display: flex;
     align-items: center;
 
+@media screen and (max-width:767px) {
+        // display: none;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
 &__item:not(:last-child) {
     margin-right: 50px;
+    @media screen and (max-width:767px) {
+            margin-right: 0;
+
+        
+        }
 }
 
 &__link {
@@ -97,16 +115,21 @@
 &:hover,
 &:focus {
     color: $text-color-hover;
+
 }
-}
-
-
-
-
 
 @media screen and (max-width:767px) {
-  display: none;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-size: 40px;
+    font-weight: 500;
 }
+}
+
+
+
+
+
 
 
 }
@@ -115,12 +138,16 @@
     
     letter-spacing: 0.02em;
     font-weight: 500;
-
+@media screen and (min-width:768px) {
+        margin-left: 100px;
+    }
 &__item{
+
+    
     @media screen and (max-width:1200px) {
     
-            margin: 0;
-            padding: 0;
+            // margin: 0;
+            // padding: 0;
         }
     
 }
@@ -137,11 +164,19 @@
     &:focus {
             color: $text-color-hover;
         }
+
+                           @media screen and (max-width:767px) {
+                               padding-top:16px;
+                               padding-bottom:16px;
+                               font-size: 34px;
+                               font-weight: 500;
+                           }
                            @media screen and (max-width:1200px) {
             
                                margin: 0;
                                padding: 0;
                            }
+                                                        
 }
 
 & &__item+&__item {
@@ -159,7 +194,9 @@
 }
 
 @media screen and (max-width:767px) {
-    display: none;
+   margin: 0;
+   padding: 0;
+   display: block;
 }
 
  @media screen and (min-width:768px) {
@@ -196,5 +233,9 @@
     border-radius: 2px;
 
     background-color: $text-color-hover;
+    @media screen and (max-width:767px) {
+            display: none;
+        }
 }
+
 }
