--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -59,6 +59,7 @@
     justify-content: center;
     align-items: center;
     padding: 25px 0;
+    border-radius: 4px;
 
     // height: 120px;
     // padding: 25px 100px;
