--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -39,7 +39,7 @@
     border-radius: 4px;
 
 @media screen and (max-width:479px) {
-        width: 100%;
+        width: 90%;
 
     }
 
@@ -253,8 +253,8 @@
         text-decoration-line: underline;
 
         color: $text-color-hover;
-        @media screen and (max-width:1200px) {
-                font-size: 12px;
+        @media screen and (max-width:479px) {
+                font-size: 10px;
                 letter-spacing: 0.02em;
                
             }
@@ -274,6 +274,24 @@
     cursor: pointer;
     position: relative;
     line-height: 1.71;
+
+    @media screen and (min-width:320px) {
+            font-size: 10px;
+            letter-spacing: 0.02em;
+    
+        }
+                @media screen and (min-width:480px) {
+                    font-size: 12px;
+                    letter-spacing: 0.02em;
+        
+                }
+
+                                 @media screen and (min-width:1200px) {
+                                     font-size: 14px;
+                                     letter-spacing: 0.02em;
+                
+                                 }
+
 
 
 &::before {
