--- a/sass/components/_partners.scss
+++ b/sass/components/_partners.scss
@@ -20,11 +20,11 @@
 
 &__list {
     @media screen and (min-width:320px) {
-            // max-width: 479px;
-
-            // &:not(:last-child) {
-            //     margin-bottom: 30px;
-            // }
+            // :not(:last-child) {
+            //         margin-bottom: 30px;
+            //     }
+            
+        
                         display: flex;
                         flex-wrap: wrap;
                         justify-content: center;
@@ -33,44 +33,39 @@
         }
     
         @media screen and (min-width:480px) {
-            // width: 450px;
-    
-            // &:not(:last-child) {
-            //     margin-bottom: 30px;
-            // }
+        // &:nth-child(2n-1) {
+        //         margin-right: 30px;
+            }
+        
+           
                         
     
     
         }
     
         @media screen and (min-width:768px) {
-        //     width: 354px;
-    
-    
-        //     &:nth-child(2n-1) {
-        //         margin-right: 30px;
-    
-        //     }
-    
-        //     &:nth-child(-n+2) {
-        //         margin-bottom: 30px;
-    
-        //     }
+       
     
     
         }
     
     @media screen and (min-width:1200px) {
             flex-wrap: nowrap;
+           
         }
-}
+
+
+        
+              
+        
+
 
 
 &__link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
+    
     height: 92px;
     border: 1px solid $social-links;
     border-radius: 4px;
@@ -84,6 +79,22 @@
             border: 1px solid $text-color-hover;
     
         }
+
+                @media screen and (min-width:320px) {
+                    width: 210px;
+      
+        
+                }
+      
+        
+                @media screen and (min-width:768px) {
+                 width: 226px;
+        
+                }
+        
+                @media screen and (min-width:1200px) {
+            width: 170px;
+                }
 }
 
 
@@ -91,60 +102,39 @@
 
 &__item{
 
-    @media screen and (min-width:200px) {
-            // max-width: 479px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media screen and (min-width:320px) {
+         margin-bottom: 30px;
     
-            &:not(:last-child) {
-                margin-bottom: 30px;
-            }
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
     
     
         }
     
-        @media screen and (max-width:767px) {
-            // width: 450px;
-    
-           
-        &:nth-child(2n-1) {
-            margin-right: 30px;
+        @media screen and (min-width:480px) {
+            margin-right: 15px;
+            margin-bottom: 15px;
         }
-                &:nth-child(-n+4) {
-                    margin-bottom: 30px;
+    
+    
+    
+    
+    
+    
+    
+    @media screen and (min-width:768px) {
+    margin-right: 20px;
+    margin-bottom: 20px;
+    
+    }
+    
+    @media screen and (min-width:1200px) {
+    margin-bottom: 0;
+    margin-right: 25;
+    
         
-                }
-    
-        }
-    
-        @media screen and (min-width:768px) {
-            //     width: 354px;
-    
-    
-            //     &:nth-child(2n-1) {
-            //         margin-right: 30px;
-    
-            //     }
-        &:nth-child(n) {
-            margin-right: 30px;
-        }
-    
-        &:nth-child(-n+3) {
-            margin-bottom: 30px;
-    
-        }
-                
-    
-    
-        }
-
-                @media screen and (min-width:1200px) {
-                &:not(:last-child) {
-                        margin-right: 30px;
-                    }
-                }
-    
+    }
 
 }
 
