--- a/sass/components/_portfolio-galery.scss
+++ b/sass/components/_portfolio-galery.scss
@@ -100,7 +100,7 @@
     height: 100%;
     width: 100%;
 
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
@@ -128,11 +128,31 @@
     &__title {
         margin-bottom: 4px;
         font-weight: 700;
-        font-size: 18px;
+        
         line-height: 2;
         letter-spacing: 0.06em;
 
         color: $text-color-h;
+
+        @media screen and (min-width:320px) {
+                font-size: 14px;
+        
+            }
+
+                        @media screen and (min-width:480px) {
+                            font-size: 18px;
+            
+                        }
+
+        @media screen and (min-width:768px) {
+                font-size: 14px;
+        
+            }
+
+                        @media screen and (min-width:1200px) {
+                            font-size: 18px;
+            
+                        }
     }
 
     &__group {
