--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -24,3 +24,9 @@ section {
         }
     
 }
+section.works {
+    @media screen and (min-width:1200px) {
+            padding-top: 0;
+            
+        }
+}
