--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -4,7 +4,11 @@
     background: $theme-color-dark;
     padding: 60px 0;    
        
+@media screen and (min-width:768px) {
+        padding-left: 20px;
+        
 
+    }
 
 
     &__item{
@@ -12,13 +16,17 @@
 
         @media screen and (min-width:320px) {
         text-align: center;
+        &:last-child {
+                margin-top: 60px;
+            
+            }
               
             }
         
             @media screen and (min-width:480px) {
                 
                 &:last-child {
-                        margin-top: 60px;
+                        
                         width: 450px;
                         margin-left: auto;
                         margin-right: auto;
@@ -27,7 +35,9 @@
 
                                           @media screen and (max-width:767px) {
                     
-                                            //  margin-top: 60px;
+                                            &:nth-child(2){
+                                                margin-top: 60px;
+                                            }
                     
                                           }
         
@@ -35,6 +45,7 @@
 
                     &:nth-child(2) {
                         margin-left: auto;
+                        margin-right: 45px;
                     }
             }
 
