--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,5 +1,13 @@
 .header {
+    z-index: 5;
     border-bottom: 1px solid rgba(0, 0, 0, 0.14);
+   
+    @media screen and (max-width:767px) {
+            position: fixed;
+            background-color:$theme-color-light ;
+            width: 100vw;
+    
+        }
 
 
 & .container {
@@ -35,14 +43,17 @@
         background-color: transparent;
         & .icon-close {
             display: none;
+            
         }
 
         &.is-open .icon-close{
             display: block;
+            
         }
 
         &.is-open .icon-menu{
             display: none;
+           
         }
 
                 @media screen and (min-width:768px) {
@@ -71,8 +82,8 @@
                     position: fixed;
                         top: 0;
                         left: 0;
-                        width: 100%;
-                        height: 100%;
+                        width: 100vw;
+                        height: 100vh;
                         
                         padding: 30px 40px;
 
@@ -84,7 +95,13 @@
                             }
             
         }
-                
+
+                @media screen and (max-width:479px) {
+                 
+                    padding: 15px 20px;
+        
+                }
+                       
     }
 }
 
@@ -103,6 +120,7 @@
         align-items: flex-start;
     }
 
+    
 &__item:not(:last-child) {
     margin-right: 50px;
     @media screen and (max-width:767px) {
@@ -132,6 +150,13 @@
     font-size: 40px;
     font-weight: 500;
 }
+
+@media screen and (max-width:479px) {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: 26px;
+    
+}
 }
 
 
@@ -152,17 +177,20 @@
         margin: 0;
         padding: 0;
         display: block;
-        margin-top: 30%;
+        margin-top:calc(8vh ) ;
         :not(:last-child) {
-                margin-bottom: 32px;
+                margin-bottom: 1vh;
+           
             }
     }
+
+    
 
     @media screen and (min-width:768px) {
         display: flex;
         flex-direction: column;
         margin-left: auto;
-
+        justify-content: center;
     }
 
     @media screen and (min-width:1200px) {
@@ -173,12 +201,21 @@
     }
 &__item{
 
+    @media screen and (max-width:1199px) {
     
-    @media screen and (max-width:479px) {
+             &:nth-child(1){
+                margin-bottom: 10px;
+             }
+                         
+        }
+
     
-        //  :nth-child(1){
-        //     margin-bottom: 32px;
-        //  }
+    @media screen and (max-width:767px) {
+    
+         &:nth-child(1){
+            margin-bottom: 0;
+         }
+                       
         }
     
 }
@@ -243,7 +280,7 @@
 
 .social-menu {
     display: flex;
-    margin-top: 64px;
+    margin-top: 4vh;
 
     @media screen and (min-width:768px) {
         
